<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="130dp"
    android:background="@color/grey_background">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        app:cardCornerRadius="15dp"
        app:cardElevation="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/txtViewRowSubjStartTime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginTop="30dp"
                android:fontFamily="sans-serif-medium"
                android:text="@string/subject_start_time"
                android:textColor="@color/black"
                android:textSize="18sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/txtViewRowSubjStartMeridiem"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/subject_start_time_meridiem"
                android:textColor="@color/black"
                app:layout_constraintBottom_toBottomOf="@+id/txtViewRowSubjStartTime"
                app:layout_constraintStart_toEndOf="@+id/txtViewRowSubjStartTime"
                app:layout_constraintTop_toTopOf="@+id/txtViewRowSubjStartTime" />

            <TextView
                android:id="@+id/txtViewRowSubjEndTime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:text="@string/subject_end_time"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="@+id/txtViewRowSubjStartTime"
                app:layout_constraintStart_toStartOf="@+id/txtViewRowSubjStartTime"
                app:layout_constraintTop_toBottomOf="@+id/txtViewRowSubjStartTime" />

            <TextView
                android:id="@+id/txtViewRowSubjEndMeridiem"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/subject_end_time_meridiem"
                android:textSize="12sp"
                app:layout_constraintBottom_toBottomOf="@+id/txtViewRowSubjEndTime"
                app:layout_constraintStart_toEndOf="@+id/txtViewRowSubjEndTime"
                app:layout_constraintTop_toTopOf="@+id/txtViewRowSubjEndTime" />

            <View
                android:id="@+id/divider"
                android:layout_width="1dp"
                android:layout_height="0dp"
                android:layout_marginStart="15dp"
                android:background="?android:attr/listDivider"
                android:backgroundTint="@color/hint_color"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@+id/txtViewRowSubjStartMeridiem"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.0" />

            <TextView
                android:id="@+id/txtViewRowSubjSubject"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginTop="5dp"
                android:fontFamily="sans-serif-medium"
                android:text="@string/subject_name"
                android:textColor="@color/black"
                android:textSize="20sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toEndOf="@+id/divider"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="5dp"
                app:layout_constraintStart_toEndOf="@+id/divider"
                app:layout_constraintTop_toBottomOf="@+id/txtViewRowSubjSubject"
                app:srcCompat="@drawable/ic_room_link"
                app:tint="@color/hint_color" />

            <ImageView
                android:id="@+id/imageView4"
                android:layout_width="20dp"
                android:layout_height="20dp"
                app:layout_constraintStart_toStartOf="@+id/imageView2"
                app:layout_constraintTop_toBottomOf="@+id/imageView2"
                app:srcCompat="@drawable/ic_day_schedule"
                app:tint="@color/hint_color" />

            <TextView
                android:id="@+id/txtViewRowSubjRoomLink"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:text="Room 000"
                android:textSize="14sp"
                app:layout_constraintBottom_toBottomOf="@+id/imageView2"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/imageView2"
                app:layout_constraintTop_toTopOf="@+id/imageView2" />

            <TextView
                android:id="@+id/txtViewRowSubjDaySchedule"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:text="Mon, Wed, Fri"
                android:textSize="14sp"
                app:layout_constraintBottom_toBottomOf="@+id/imageView4"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/imageView4"
                app:layout_constraintTop_toTopOf="@+id/imageView4" />

            <com.mikhaellopez.circularimageview.CircularImageView
                android:id="@+id/avatarRowSubjImage"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="10dp"
                android:src="@drawable/avatar_place_holder"
                app:civ_border_color="#EAEAEA"
                app:civ_border_width="0dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="@+id/imageView4"
                app:layout_constraintTop_toBottomOf="@+id/imageView4" />

            <TextView
                android:id="@+id/txtViewRowSubjInstructor"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:text="Instructor Name"
                android:textColor="@color/black"
                app:layout_constraintBottom_toBottomOf="@+id/avatarRowSubjImage"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/avatarRowSubjImage"
                app:layout_constraintTop_toTopOf="@+id/avatarRowSubjImage" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>